# ai4s-infra

./: .gitignore  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  start.bat
.claude/: settings.local.json
ai4s/: __init__.py
ai4s/agent/: __init__.py  memory.py  orchestrator.py  router.py
ai4s/agent_runtime/: __init__.py  api.py  orchestration.py
ai4s/agent_runtime/memory/: retrieval.py  store.py  summarizer.py
ai4s/agent_runtime/scheduler/: dispatcher.py  queue.py  router.py
ai4s/agent_runtime/tools/: executor.py  literature_search.py  registry.py  sandbox.py
ai4s/common/: __init__.py  config.py  exceptions.py  logging.py  metrics.py
ai4s/data_infra/: __init__.py  api.py  prediction.py
ai4s/data_infra/cleaning/: molecular_transformer.py  quality.py  transformer.py  validator.py
ai4s/hpc_fusion/: __init__.py  api.py
ai4s/rlhf/: __init__.py  api.py  pipeline.py
config/: settings.yaml
docker/: Dockerfile.agent  Dockerfile.data  Dockerfile.hpc  Dockerfile.rlhf  grafana-datasources.yml  init-db.sql  prometheus.yml
docs/: AI4S-Platform-Technical-Documentation.docx  AI4S-Platform-Technical-Documentation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
tests/test_agent_runtime/: test_api.py  test_scheduler.py
tests/test_data_infra/: test_api.py  test_connector.py  test_validator.py
tests/test_hpc_fusion/: test_api.py  test_scheduler.py
tests/test_rlhf/: test_api.py  test_reward.py
(+40 files in other folders)
