[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4s-infra"
version = "0.1.0"
description = "AI4S Infrastructure — data, RLHF, agent runtime, and HPC fusion computing"
requires-python = ">=3.10"
dependencies = [
    "ray[default]>=2.9",
    "torch>=2.1",
    "transformers>=4.36",
    "datasets>=2.16",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "redis>=5.0",
    "fastapi>=0.108",
    "uvicorn>=0.25",
    "httpx>=0.26",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "boto3>=1.34",
    "kubernetes>=28.1",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "tenacity>=8.2",
    "click>=8.1",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "asyncpg>=0.29",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
cheminformatics = [
    "rdkit>=2023.9",
]
pdf = [
    "pypdf>=4.0",
]
all = [
    "rdkit>=2023.9",
    "pypdf>=4.0",
]

[tool.setuptools.packages.find]
include = ["ai4s*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
